--- a/client/post.jade
+++ b/client/post.jade
@@ -7,7 +7,7 @@ template(name='post_view')
                         a.ui.large.circular.button(href="/#{group}")
                             i.chevron.left.icon
                             |#{group}
-                        .ui.inline.header #{data.title} #{title}
+                        .ui.inline.header.say #{data.title} #{title}
                         // div
                         // .ui.inline.grey.header {{from_now start_datetime}}
                         
