--- a/client/fields.jade
+++ b/client/fields.jade
@@ -473,17 +473,17 @@ template(name='array_edit')
     if i
         i.grey.icon(class=i)
         // +icon name=icon cl='ui avatar image'
-    .ui.inline.header
-        |#{field_value.length}
-        if title
-            |#{title}
-        else if label
-            |#{label}
-        else if key
-            |#{key}
+    // .ui.inline.small.grey.header
+    //     |#{field_value.length}
+    //     if title
+    //         |#{title}
+    //     else if label
+    //         |#{label}
+    //     else if key
+    //         |#{key}
     .ui.icon.input
         i.icon(class=i)
-        input.new_element(type='text' placeholder='+' autocomplete="off")
+        input.new_element(type='text' placeholder="#{field_value.length} #{label}" autocomplete="off")
         //- +clear_value                
     if field_value
         each field_value
