--- a/client/post.jade
+++ b/client/post.jade
@@ -2,70 +2,7 @@ template(name='post_view')
     with doc_by_id
         .ui.stackable.grid
             .row 
-                .four.wide.column.scrolling
-                    .ui.segmen
-                        a.ui.large.circular.button(href="/#{group}")
-                            i.chevron.left.icon
-                            |#{group}
-                        // div
-                        // .ui.inline.grey.header {{from_now start_datetime}}
-                        
-                        if in_dev
-                            a.edit_post(href="/#{group}/p/#{_id}/edit" title='edit')
-                                i.large.link.pencil.circular.icon
-                        div
-                        span(title='views')
-                            | #{views}
-                            i.grey.eye.icon
-                        +array_edit key='tags' label='tags' direct=true
-                        // +voting_full
-                        +link_view key='link' label='link' direct=true
-    
-                        +array_edit key='time_tags' label='time tags' icon='clock' direct=true
-                        +array_edit key='location_tags' label='location tags' icon='marker' direct=true
-                        a.ui.basic.fluid.button(href=data.url target="_window" title=data.url) 
-                            i.external.icon
-                            |url
-                        .ui.large.basic.label
-                            | #{data.domain}
-                        unless data.is_reddit_media_domain    
-                            if data.thumbnail
-                                img.ui.fluid.rounded.image.pointer.call_thumbnail.zoomer(src=data.thumbnail)
-                        // .ui.header #{data.domain}
-                        a.ui.basic.button(href="https://www.reddit.com#{data.permalink}" target="_window") 
-                            i.external.grey.icon
-                            |r/#{data.subreddit}
-                        .spacer
-                        // a.ui.basic.button(href="https://www.reddit.com/user/#{author}" target='_window')
-                        a.ui.basic.button.goto_ruser(href="/user/#{data.author}")
-                            i.user.outline.icon
-                            |#{data.author}
-                        +call_watson id=_id key='data.url' durl=data.url mode='url'
-                        if in_dev
-                            +print_this
-                        if watson
-                            +doc_emotion
-                            // unless tone
-                            //     +call_tone    
-                        // a.ui.large.basic.label(href=data.url target='_window')
-                        //     | #{data.url}
-                        if in_dev
-                            .ui.small.header reddit_id #{data.reddit_id}
-                        .ui.basic.label
-                            i.comment.outline.icon
-                            |#{data.comment_count}
-                        .ui.basic.label
-                            i.thumbs.up.outline.icon
-                            |#{data.ups}
-                        |{{to_percent data.upvote_ratio}}%
-                        .ui.small.inline.header #{data.num_crossposts} crossposts
-                        |#{tags.length}
-                        each tags
-                            +flat_tag_picker
-                    .ui.basic.button.get_post permalink #{permalink}
-                    .ui.label #{data.ups}
-                        
-                .twelve.wide.column.scrolling
+                .twelve.wide.column.scrlling
                     if image_link
                         a(href="/#{group}")
                             +image_link_view key='image_link' direct=true
@@ -160,6 +97,69 @@ template(name='post_view')
                     if watson
                         +watson_view
                         +watson_full
+                .four.wide.column.scroling
+                    .ui.segmen
+                        a.ui.large.circular.button(href="/#{group}")
+                            i.chevron.left.icon
+                            |#{group}
+                        // div
+                        // .ui.inline.grey.header {{from_now start_datetime}}
+                        
+                        if in_dev
+                            a.edit_post(href="/#{group}/p/#{_id}/edit" title='edit')
+                                i.large.link.pencil.circular.icon
+                        div
+                        span(title='views')
+                            | #{views}
+                            i.grey.eye.icon
+                        +array_edit key='tags' label='tags' direct=true
+                        // +voting_full
+                        +link_view key='link' label='link' direct=true
+    
+                        +array_edit key='time_tags' label='time tags' icon='clock' direct=true
+                        +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                        a.ui.basic.fluid.button(href=data.url target="_window" title=data.url) 
+                            i.external.icon
+                            |url
+                        .ui.large.basic.label
+                            | #{data.domain}
+                        unless data.is_reddit_media_domain    
+                            if data.thumbnail
+                                img.ui.fluid.rounded.image.pointer.call_thumbnail.zoomer(src=data.thumbnail)
+                        // .ui.header #{data.domain}
+                        a.ui.basic.button(href="https://www.reddit.com#{data.permalink}" target="_window") 
+                            i.external.grey.icon
+                            |r/#{data.subreddit}
+                        .spacer
+                        // a.ui.basic.button(href="https://www.reddit.com/user/#{author}" target='_window')
+                        a.ui.basic.button.goto_ruser(href="/user/#{data.author}")
+                            i.user.outline.icon
+                            |#{data.author}
+                        +call_watson id=_id key='data.url' durl=data.url mode='url'
+                        if in_dev
+                            +print_this
+                        if watson
+                            +doc_emotion
+                            // unless tone
+                            //     +call_tone    
+                        // a.ui.large.basic.label(href=data.url target='_window')
+                        //     | #{data.url}
+                        if in_dev
+                            .ui.small.header reddit_id #{data.reddit_id}
+                        .ui.basic.label
+                            i.comment.outline.icon
+                            |#{data.comment_count}
+                        .ui.basic.label
+                            i.thumbs.up.outline.icon
+                            |#{data.ups}
+                        |{{to_percent data.upvote_ratio}}%
+                        .ui.small.inline.header #{data.num_crossposts} crossposts
+                        |#{tags.length}
+                        each tags
+                            +flat_tag_picker
+                    .ui.basic.button.get_post permalink #{permalink}
+                    .ui.label #{data.ups}
+                        
                 // .twelve.wide.column.scrolling
 
 template(name='post_edit')
