--- a/client/group.jade
+++ b/client/group.jade
@@ -197,7 +197,7 @@ template(name='group')
                 
 template(name='tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.compact.circular.tertiary.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    .ui.compact.circular.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -262,18 +262,8 @@ template(name='post_card_small')
                     |!{raw}
             each five_tags
                 +flat_tag_picker
-            if in_dev
-                +print_this
-                +remove_button
             a.ui.circular.icon.button(href="/#{group}/p/#{_id}")
                 i.right.chevron.icon
-    
-        // .ui.stackable.equal.width.compact.grid
-        //     .row
-        // // else if data.thumbnail.length
-        //     .column
-        //         a.view_post(href="/#{group}/p/#{_id}" class=post_header_class)
-        //             img.ui.rounded.inline.image.zoomer(src=data.thumbnail)    
         | #{data.ups}
         i.thumbs.up.outline.grey.icon
         | #{data.num_comments}
@@ -283,12 +273,14 @@ template(name='post_card_small')
         //     .ui.tiny.circular.label #{this}
         // a.ui.label(href="/u/#{data.author}")
         //     |#{data.author}
+        i.dna.link.circular.icon.call_watson
+        +doc_emotion_small        
         // if watson
-        //     +doc_emotion_small        
             
             // span.inline.content
             // span.inline.content
         if in_dev
+            +remove_button
             +print_this
    
 template(name='doc_item')                  
